# ChangeLog for virtual/blas
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/blas/ChangeLog,v 1.3 2010/01/11 10:55:38 ulm Exp $

  19 Jan 2014; Justin Lecher <jlec@gentoo.org> -blas-2.1.ebuild,
  +blas-2.1-r1.ebuild:
  Warn if old ${EPREFIX}/usr/$(get_libdir)/lib${PN}.so is present

  06 Feb 2013; Justin Lecher <jlec@gentoo.org> blas-2.1.ebuild, metadata.xml:
  Raise eigen version in deps

*blas-2.1 (07 Sep 2011)

  07 Sep 2011; Sébastien Fabbro <bicatali@gentoo.org> -blas-2.0.ebuild,
  +blas-2.1.ebuild:
  Updated deps

  23 Aug 2011; Sébastien Fabbro <bicatali@gentoo.org> blas-2.0.ebuild:
  Block older blas with higher version

  11 Jan 2010; Ulrich Mueller <ulm@gentoo.org> blas-1.0.ebuild:
  Set empty HOMEPAGE and LICENSE.

  15 Dec 2009; Jonathan Callen <abcd@gentoo.org> blas-1.0.ebuild:
  Add prefix keywords (~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos)

*blas-1.0 (10 Oct 2007)

  10 Oct 2007; Sébastien Fabbro <bicatali@gentoo.org> +metadata.xml,
  +blas-1.0.ebuild:
  New style virtual for blas. Version number is abitrary.
